@@ -5,13 +5,12 @@
 	</bean>
 
     <bean id="mgiPhenotype" class="edu.mcw.rgd.dataload.MGIPhenotypeImporter">
-        <property name="version" value="MGIPhenotypeImporter ver 1.5.4 as of May 21, 2018" />
+        <property name="version" value="MGIPhenotypeImporter ver 1.5.5 as of May 2, 2019" />
         <property name="fileURL" value="http://www.informatics.jax.org/downloads/reports/MGI_PhenoGenoMP.rpt" />
         <property name="workDirectory" value="data" />
         <property name="owner" value="206" />
         <property name="dataSource" value="MGI" />
         <property name="refRgdId" value="5509061" />
-        <property name="minFileSize" value="1000000" /><!--min file size of compressed source file -->
         <property name="staleAnnotThreshold" value="5" /><!--in percent: if there are more annots to be deleted than the threshold, no annots will be deleted, and alert will be issued -->
     </bean>
 
