@@ -1,5 +1,6 @@
 May 2, 2019 - v.1.6.6
  - tuned up summary emails
+ - simplified logic for MGI pehnotype pipeline
 
 Feb 15, 2019 - v.1.6.5
  - updated dependencies
